# pact-testing-demo

./: .gitignore  Dockerfile  Makefile  pyproject.toml
src/provider/: app.py
taf/: consumer.py
tests/: api_tests.py  conftest.py  pact_tests.py
tests/api_tests/: conftest.py
tests/pact_tests/: conftest.py  test_consumer.py  test_pact.py
